# 42-doom-nukem

./: .gitignore  CMakeLists.txt  Makefile  author  doom-nukem  sdf  test.txt
Bisqwit/: _README  engine  main.c  map-clear.txt  portrend.bas.txt  portrend.c  prender.c  sdltest  vertrot-convex.bas.txt  vertrot-filledwall1.bas.txt  vertrot-non-convex.bas  vertrot.bas.txt
include/: doom_nukem.h  doom_nukem_editor.h  duke_nukem_editor.h
libft/: Makefile
libft/include/: libft.h
libft/src/: file_to_line.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_range.c  ft_rgb.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+27 more)
map_editor/: Makefile  doom-editor
map_editor/include/: duke_nukem_editor.h
map_editor/src/: draw_line.c  env_display.c  float_to_str.c  free_record.c  image_manipulation_b.c  list_managing.c  list_managing_b.c  list_managing_e.c  main.c  main_d.c  main_e.c  stack_manipulation.c  texture_load_a.c
maps/: ya_karta.doom
res/: map-clear.txt  simple.txt
sprites/: 3.pbm
src/: additional_fts.c  additional_fts1.c  additional_fts2.c  compile.sh  data_transform.c  data_transform_a.c  data_transform_b.c  data_transform_c.c  data_transform_d.c  decor_texture.c  draw_line.c  draw_screen.c  draw_screen1.c  draw_screen2.c  draw_screen3.c  editor_main.c  engine  engine-compile.sh  env_display.c  errors.c  float_to_str.c  font.c  free_record.c  gl_and_events.c  image_manipulation.c  image_manipulation_a.c  image_manipulation_b.c  init.c  lighter_and_events.c  lighter_and_sounds.c  lighter_and_sounds1.c  list_managing.c  list_managing.c~  list_managing_b.c  list_managing_c.c  list_managing_d.c  list_managing_e.c~  load_data.c  main.c  main.c~  (+30 more)
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/maps/: map-clear.txt  simple.txt
textures/: bluestone.xpm  bricks0.xpm  bricks1.xpm  bricks2.xpm  bricks3.xpm  colorstone.xpm  demian.xpm  diamond.xpm  dirt.xpm  eagle.xpm  emerald.xpm  gena.xpm  gold.xpm  grav.xpm  greystone.xpm  iron.xpm  mossy.xpm  natali.xpm  pepe.xpm  pillar.xpm  purplestone.xpm  redbrick.xpm  resizegena1.xpm  resizegena2.xpm  resizegena3.xpm  resizegena4.xpm  stone.xpm  vad.xpm  wood.xpm
